src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Multiplier_PAR__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Multiplier (PAR)</description>
        <inlineHelpText>Multiplier (PAR)</inlineHelpText>
        <label>Multiplier (PAR)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetPrice__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost_Total__c</fullName>
        <formula>Net_Cost__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Cost Total $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <label>Net Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Selling_Price__c</fullName>
        <label>Option Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outsource_Add_On__c</fullName>
        <description>Commission Add On $</description>
        <inlineHelpText>Commission Add On $
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Commission Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_Reference_Number__c</fullName>
        <label>PAR Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <description>Created for DSO&apos;s</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Date_Month__c</fullName>
        <description>This field is created to display the Estimated Shipping Month for Latin America at Product level.</description>
        <formula>TEXT(YEAR( ServiceDate  ))&amp; &quot; &quot; &amp; CASE(MONTH(  ServiceDate ), 1, &quot;01(January)&quot;, 2, &quot;02(February)&quot;, 3, &quot;03(March)&quot;, 4, &quot;04(April)&quot;, 5, &quot;05(May)&quot;, 6, &quot;06(June)&quot;, 7, &quot;07(July)&quot;, 8, &quot;08(August)&quot;, 9, &quot;09(September)&quot;, 10, &quot;10(October)&quot;, 11, &quot;11(November)&quot;, 12, &quot;12(December)&quot;, &quot;&quot;)</formula>
        <inlineHelpText>This field is created to display the Estimated Shipping Month for Latin America at Product level.</inlineHelpText>
        <label>Revenue Date (Month)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Date_Report__c</fullName>
        <description>Field to be used in reports to display correct Pipeline date.</description>
        <formula>IF(!ISPICKVAL(Opportunity.StageName, &quot;Won&quot;),IF(ISNULL(ServiceDate),Opportunity.CloseDate,ServiceDate),IF(ISNULL(Actual_Ship_Date__c),IF(ISNULL(ServiceDate),Opportunity.CloseDate,ServiceDate),Actual_Ship_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to be used in reports to display correct Pipeline date.</inlineHelpText>
        <label>Revenue Date (Report)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Price_Total__c</fullName>
        <formula>UnitPrice *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Total_Equip_Price_FOB__c</fullName>
        <description>Total Equipment Selling Price $
Unit Equipment Selling Price $ * Quantity</description>
        <formula>Selling_Unitary_Equipment_Price_FOB__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equipment Selling Price $
Unit Equipment Selling Price $ * Quantity</inlineHelpText>
        <label>Total Equipment Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Total_F_L__c</fullName>
        <description>Total Freight Selling Price $
Unit Freight Selling Price $ * Quantity</description>
        <formula>Selling_Unitary_Freight_Logistic__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Freight Selling Price $
Unit Freight Selling Price $ * Quantity</inlineHelpText>
        <label>Total Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Unitary_Equipment_Price_FOB__c</fullName>
        <description>Unit Equipment Selling Price $
Unit Equipment Cost $ / (1- Equipment Gross Margin %)</description>
        <formula>ROUND(Equipment_Price_FOB__c  / (1 - Equipment_Gross_Margin__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Equipment Selling Price $
Unit Equipment Cost $ / (1- Equipment Gross Margin %)</inlineHelpText>
        <label>Unit Equipment Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Selling_Unitary_Freight_Logistic__c</fullName>
        <description>Unit Freight Selling Price $
Unit Freight Cost $ / (1 - Freight Gross Margin %)</description>
        <formula>ROUND(Total_Freight_Logistic__c / (1 - Freight_Gross_Margin__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Freight Selling Price $
Unit Freight Cost $ / (1 - Freight Gross Margin %)</inlineHelpText>
        <label>Unit Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Add_On__c</fullName>
        <description>Service Add On $</description>
        <inlineHelpText>Service Add On $
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Service Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_up_Add_On__c</fullName>
        <description>Start-up Add On $</description>
        <inlineHelpText>Start-up Add On $
Divide this cost by Quantity of Product item</inlineHelpText>
        <label>Start-up Add On $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier_Part_Number__c</fullName>
        <description>Created for the DSO&apos;s</description>
        <label>Supplier Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAG__c</fullName>
        <description>TAG</description>
        <inlineHelpText>TAG</inlineHelpText>
        <label>TAG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Opp_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Opp Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Quantity * Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Freight_Logistic__c</fullName>
        <description>Unit Freight Cost $
(Unit Equipment Cost $ * Domestic Freight %) + Domestic Freight $ + Export Freight Add On $</description>
        <formula>ROUND((Equipment_Price_FOB__c  * Freight_Percent__c),2) + Freight__c + Logistics_Add_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Freight Cost $
(Unit Equipment Cost $ * Domestic Freight %) + Domestic Freight $ + Export Freight Add On $</inlineHelpText>
        <label>Unit Freight Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>Quantity * List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>List Price $ * Quantity</inlineHelpText>
        <label>Total List Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>This field is used to calculate total price for each line item(Quanitity * ListPrice)</description>
        <formula>Quantity * ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Price of this product</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Discount__c</fullName>
        <description>Total Equipment + Freight Discount $
[Unit Equipment + Freight Discount $] * Quantity</description>
        <formula>Unitary_Selling_Discount__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equipment + Freight Discount $
[Unit Equipment + Freight Discount $] * Quantity</inlineHelpText>
        <label>Total Equipment + Freight Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Log_Disc__c</fullName>
        <description>Total Equip+Freight Selling Price w Disc
[Unit Equip +Freight Selling Price w Disc] * Quantity</description>
        <formula>Unitary_Selling_Price_w_Log_Disc__c *  Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equip+Freight Selling Price w Disc
[Unit Equip +Freight Selling Price w Disc] * Quantity</inlineHelpText>
        <label>Total Equip+Freight Selling Price w Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Selling_Price_w_Logistics__c</fullName>
        <description>Total Equip + Freight Selling Price $
[Unit Equipment Selling Price $ + Unit Freight Selling Price $] * Quantity</description>
        <formula>Unitary_Selling_Price_w_Logistics__c * Quantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equip + Freight Selling Price $
[Unit Equipment Selling Price $ + Unit Freight Selling Price $] * Quantity</inlineHelpText>
        <label>Total Equip + Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <description>Created for the DSO&apos;s</description>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Discount__c</fullName>
        <description>Unit Equipment + Freight Discount $
([Equipment + Freight Selling Price $] * [Equipment + Freight Discount %]) + [Equipment + Freight Discount $]</description>
        <formula>ROUND(ROUND((Unitary_Selling_Price_w_Logistics__c   *  Discount_Percent__c),2) +  Discount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Equipment + Freight Discount $
([Equipment + Freight Selling Price $] * [Equipment + Freight Discount %]) + [Equipment + Freight Discount $]</inlineHelpText>
        <label>Unit Equipment + Freight Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Price_w_Log_Disc__c</fullName>
        <description>Unit Equipment + Freight Selling Price w Disc
(Unit Equipment Selling Price $ + Unit Freight Selling Price $) - [Unit Equipment + Freight Discount $]</description>
        <formula>Unitary_Selling_Price_w_Logistics__c - Unitary_Selling_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Equipment + Freight Selling Price w Disc
(Unit Equipment Selling Price $ + Unit Freight Selling Price $) - [Unit Equipment + Freight Discount $]</inlineHelpText>
        <label>Unit Equip +Freight Selling Price w Disc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unitary_Selling_Price_w_Logistics__c</fullName>
        <description>Unit Equipment + Freight Selling Price $
Unit Equipment Selling Price $ + Unit Freight Selling Price $</description>
        <formula>(Selling_Unitary_Freight_Logistic__c + Selling_Unitary_Equipment_Price_FOB__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unit Equipment + Freight Selling Price $
Unit Equipment Selling Price $ + Unit Freight Selling Price $</inlineHelpText>
        <label>Unit Equipment + Freight Selling Price $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Supplier__c</fullName>
        <formula>PricebookEntry.Product2.Vendor_Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor/Supplier</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Actual_Ship_Date_Validation_Rule</fullName>
        <active>false</active>
        <description>Requires Actual Ship Date to be specified for closed/won opportunities.</description>
        <errorConditionFormula>BEGINS($Profile.Name, &quot;Latin&quot;) &amp;&amp; ISPICKVAL(Opportunity.StageName,&quot;Won&quot;) &amp;&amp;  ISBLANK(Actual_Ship_Date__c) &amp;&amp; IF(ISCHANGED(ServiceDate),False,True) &amp;&amp; IF(ISCHANGED(Converted_to_Asset__c),False,True)</errorConditionFormula>
        <errorMessage>You must specify an Actual Ship Date for Closed/Won opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exchange_Rate_Validation_Rule</fullName>
        <active>true</active>
        <description>Ensures that a valid exchange rate is entered.</description>
        <errorConditionFormula>BEGINS($Profile.Name, &quot;Latin&quot;) &amp;&amp; NOT(ISNEW()) &amp;&amp; Local_Currency__c &lt;&gt; &quot;USD&quot; &amp;&amp; Local_Currency__c &lt;&gt; &quot;&quot; &amp;&amp;  Exchange_Rate__c = 1.0 &amp;&amp; !ISPICKVAL(Opportunity.StageName,&quot;Won&quot;)</errorConditionFormula>
        <errorMessage>Please enter a valid exchange rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Miscellaneous_Add_Ons_Validation_Rule</fullName>
        <active>true</active>
        <description>Ensures that miscellaneous add on amounts and types are entered correctly.</description>
        <errorConditionFormula>(Misc_Add_On_One_Amount__c &lt;&gt; 0 &amp;&amp; TEXT(Misc_Add_On_One_Type__c) = &quot;&quot;)
||
(Misc_Add_On_Two_Amount__c &lt;&gt; 0 &amp;&amp; TEXT(Misc_Add_On_Two_Type__c) = &quot;&quot;)
||
(Misc_Add_On_Three_Amount__c &lt;&gt; 0 &amp;&amp; TEXT(Misc_Add_On_Three_Type__c) = &quot;&quot;)
||
(Misc_Add_On_Four_Amount__c &lt;&gt; 0 &amp;&amp; TEXT(Misc_Add_On_Four_Type__c) = &quot;&quot;)
||
(Misc_Add_On_One_Amount__c = 0 &amp;&amp; NOT(TEXT(Misc_Add_On_One_Type__c) = &quot;&quot;))
||
(Misc_Add_On_Two_Amount__c = 0 &amp;&amp; NOT(TEXT(Misc_Add_On_Two_Type__c) = &quot;&quot;))
||
(Misc_Add_On_Three_Amount__c = 0 &amp;&amp; NOT(TEXT(Misc_Add_On_Three_Type__c) = &quot;&quot;))
||
(Misc_Add_On_Four_Amount__c = 0 &amp;&amp; NOT(TEXT(Misc_Add_On_Four_Type__c) = &quot;&quot;))</errorConditionFormula>
        <errorMessage>When entering Misc. Add Ons, both the type and amount must be specified.</errorMessage>
    </validationRules>
</CustomObject>